# FastAPI_MySQL_Boilerplate

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml
app/: database.py  dependencies.py  main.py  models.py  pyproject.toml  schemas.py
app/core/: security.py
app/migrations/: env.py
app/migrations/versions/: 3220c1d0b75a_initial_with_auth_system.py  9ad24d77da47_extend_token_length.py  ae73eff557ac_initial_migration.py
app/routers/: auth.py  items.py  users.py
app/tests/: conftest.py  test_auth.py  test_items.py  test_root.py
