[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "mr-cliche-git",email = "mr.cliche7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pymysql (>=1.1.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
pytest = "^9.0.3"
httpx = "^0.28.1"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"

