[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "mr-cliche-git",email = "mr.cliche7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pymysql (>=1.1.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "cryptography (>=48.0.0,<49.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "bcrypt (==4.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
isort = "^8.0.1"
pytest = "^9.0.3"
httpx = "^0.28.1"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
alembic = "^1.18.4"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]

[tool.isort]
profile = "black"